<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/baseline_history_24"
        android:title="@string/history" />
    <item
        android:id="@+id/nav_cards"
        android:icon="@drawable/baseline_credit_card_24"
        android:title="@string/cards"
        />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_graph"
        android:icon="@drawable/baseline_pie_chart_24"
        android:title="Graph" />
</menu>